--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>ETH 123</title>
+    <title>123 BTC</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta http-equiv="Cache-Control" content="max-age=604800" />
     <!-- Primary Meta Tags -->
-    <meta name="title" content="ETH 123">
-    <meta name="description" content="A Portal to Ethereum Ecosystem 以太坊生态资源导航">
+    <meta name="title" content="123 BTC">
+    <meta name="description" content="A Portal to Bitcoin Ecosystem 比特币生态资源导航">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://eth123.org">
-    <meta property="og:title" content="ETH 123">
-    <meta property="og:description" content="A Portal to Ethereum Ecosystem 以太坊生态资源导航">
+    <meta property="og:url" content="https://123btc.org">
+    <meta property="og:title" content="123 BTC">
+    <meta property="og:description" content="A Portal to Bitcoin Ecosystem 比特币生态资源导航">
     <meta property="og:image" content="https://expo-res.sparkpool.com/newOS/meta.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://eth123.org">
-    <meta property="twitter:title" content="ETH 123">
-    <meta property="twitter:description" content="A Portal to Ethereum Ecosystem 以太坊生态资源导航">
+    <meta property="twitter:url" content="https://123btc.org">
+    <meta property="twitter:title" content="123 BTC">
+    <meta property="twitter:description" content="A Portal to Bitcoin Ecosystem 比特币生态资源导航">
     <meta property="twitter:image" content="https://expo-res.sparkpool.com/newOS/meta.png">
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -34,7 +34,7 @@
       var _hmt = _hmt || [];
       (function() {
         var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?7111013edca9d58aa7629853c4c25ff9";
+        hm.src = "https://hm.baidu.com/hm.js?1d04e2ce63d05cfc8cfe6f38fdf983ff";
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(hm, s);
       })();
