--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://123btc.org">
     <meta property="og:title" content="123 BTC">
     <meta property="og:description" content="A Portal to Bitcoin Ecosystem 比特币生态资源导航">
-    <meta property="og:image" content="https://expo-res.sparkpool.com/newOS/meta.png">
+    <meta property="og:image" content="https://expo-res.sparkpool.com/newOS/meta-btc.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://123btc.org">
     <meta property="twitter:title" content="123 BTC">
     <meta property="twitter:description" content="A Portal to Bitcoin Ecosystem 比特币生态资源导航">
-    <meta property="twitter:image" content="https://expo-res.sparkpool.com/newOS/meta.png">
+    <meta property="twitter:image" content="https://expo-res.sparkpool.com/newOS/meta-btc.png">
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
